Day8_Ingress/Deployment_apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-apache
  labels:
    app: my-deployment-app
    type: apache-frontend
    stage: deployment
spec:
  template:
    metadata:
      name: my-deployment-app
      labels:
        type: frontend-apache
        stage: deployment
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
             - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      type: frontend-apache
      stage: deployment
