Day8_Ingress/Deployment_nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: my-deployment-app
    type: frontend
    stage: deployment
spec:
  template:
    metadata:
      name: my-deployment-app
      labels:
        type: frontend
        stage: deployment
    spec:
      containers:
        - name: nginx
          image: nginx
  replicas: 2
  selector:
    matchLabels:
      type: frontend
      stage: deployment
