Day8_Ingress/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: test
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix # Exact, prefix or mixed. Link: https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            backend:
              service:
                name: app-deployment
                port:
                  number: 80
