Day8_Ingress/Ingress_Path_Based_Route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: test
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-deployment
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-deployment-apache
                port:
                  number: 80
